--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		<h1>Current Weather and 10-day Forecast</h1>
 		<form id="form">
 			<label for="input_city">Enter</label>
-			<input type="text" id="input_city" name="search" placeholder="city" required>
+			<input type="text" id="input_city" name="city" placeholder="city" required>
 			<label for="input_state"> and </label>
-			<input type="text" id="input_state" name="search" placeholder="state" required>
+			<input type="text" id="input_state" name="state" placeholder="state" required>
 			<button form="form" id="button">GO</button>
 		</form>
 	</header>
@@ -27,7 +27,7 @@
 	</section>
 
 	<footer>
-		<img src="img/wundergroundLogo_4c_horz.png">
+		<img src="img/wundergroundLogo_4c_horz.png" alt="Wunderground Logo">
 	</footer>
 
 	<script src="js/jquery-2.1.0.min.js"></script>
