--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
 	<link href='https://fonts.googleapis.com/css?family=Exo:400,300,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
+
+	<script src="js/handlebars-v4.0.5.js"></script>
+
+	<script id="current_content" type="text/x-handlebars-template">
+     	<h3>Today&#39;s Weather:</h3>
+			<h1> {{city}} , {{state}} </h1>
+			<h3>{{day}} {{time}}</h3>
+			<img id="weatherImage" src="{{icon}}">
+			<p>{{weather}}</p>
+	</script>
+
+	<script id="forecast_content" type="text/x-handlebars-template">
+			<h3>Forecast for the next 10 days:</h3>
+			<div id="scrollBox"></div>
+	</script>
+	
+	<script id="forecast_inner" type="text/x-handlebars-template">
+			<h3>{{day}}</h3>
+			<img id="weatherImage" src="{{icon}}">
+			<p>{{weather}}</p>
+	</script>
+
 </head>
 <body class="wrap">
 
@@ -14,9 +36,9 @@
 		<h1>Current Weather and 10-day Forecast</h1>
 		<form id="form">
 			<label for="input_city">Enter</label>
-			<input type="text" id="input_city" name="search" placeholder="city" required>
+			<input type="text" id="input_city" name="city" placeholder="city" required>
 			<label for="input_state"> and </label>
-			<input type="text" id="input_state" name="search" placeholder="state" required>
+			<input type="text" id="input_state" name="state" placeholder="state" required>
 			<button form="form" id="button">GO</button>
 		</form>
 	</header>
@@ -27,7 +49,7 @@
 	</section>
 
 	<footer>
-		<img src="img/wundergroundLogo_4c_horz.png">
+		<img src="img/wundergroundLogo_4c_horz.png" alt="Wunderground Logo">
 	</footer>
 
 	<script src="js/jquery-2.1.0.min.js"></script>
