--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		<h1>Current Weather and 10-day Forecast</h1>
 		<form id="form">
 			<label for="input_city">Enter</label>
-			<input type="text" id="input_city" name="city" placeholder="city" required>
+			<input type="text" id="input_city" class="border-default" name="city" placeholder="city" required>
 			<label for="input_state"> and </label>
-			<input type="text" id="input_state" name="state" placeholder="state" required>
+			<input type="text" id="input_state" class="border-default" name="state" placeholder="state" required>
 			<button form="form" id="button">GO</button>
 		</form>
 	</header>
